--- a/portfolio-store/package.json
+++ b/portfolio-store/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "eslint-webpack-plugin": "^4.2.0",
+    "jest-worker": "^29.7.0",
     "nodemon": "^3.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "terser-webpack-plugin": "^2.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "playground-2.mongodb.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
